# ciphern

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  Cargo.toml  IFLOW.md  README.md  README_zh.md  STRUCTURE_OPTIMIZATION_REPORT.md  USE_GUIDE.md  debug_audit.rs  deny.toml
.gitee/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  health-check.yml  release.yml  tag-deleted.yml
benches/: cipher_bench.rs
examples/: aes_gcm_validation.rs  demo.rs  digital_signatures.rs  double_ratchet_demo.rs  fips_compliance.rs  hashing.rs  java_api.rs  key_derivation.rs  key_exchange_chacha.rs  key_management.rs  python_api.rs  random_generation.rs  simd_acceleration.rs  streaming_encryption.rs  symmetric_encryption.rs  test_libsm.rs
examples/_common/: _mod.rs  mod.rs
locales/: en.toml  zh.toml
src/: audit.rs  debug_test.rs  error.rs  i18n.rs  lib.rs  memory.rs  random.rs  service.rs  types.rs  ui.rs
src/api_key/: cache.rs  error.rs  generator.rs  mod.rs  notification.rs  permission.rs  rotation.rs  task.rs  types.rs  validator.rs
src/api_key/entities/: api_key.rs  expiry_notification.rs  key_rotation.rs  mod.rs  rate_limit_block.rs  validation_failure.rs
src/api_key/migration/: m2024_01_04_000000_create_api_keys.rs  mod.rs
src/cipher/: aes.rs  aes128.rs  aes192.rs  base_provider.rs  chacha20poly1305.rs  enum_file.rs  impl_file.rs  mod.rs  mode.rs  pkcs7.rs  provider.rs  sm4.rs  streaming.rs  struct_file.rs  tests.rs
src/ffi/: c_api.rs  context.rs  interface.rs  java_jni.rs  jni_utils.rs  mod.rs  python_pyo3.rs
src/fips/: mod.rs  self_test.rs  tests.rs  validator.rs
src/fips/tests/cavp/: mod.rs
src/hardware/: cpu.rs  mod.rs  parallel.rs
src/hardware/gpu/: device.rs  kernels.rs  memory.rs  mod.rs
src/hardware/gpu/device/: cuda.rs  opencl.rs  sycl.rs
src/hardware/gpu/kernels/: aes_kernel.rs  cuda_hash.rs  cuda_signature.rs  hash_kernel.rs  opencl_hash.rs  opencl_signature.rs  signature_kernel.rs  sm4_kernel.rs
src/hardware/gpu/kernels/aes_kernel/: cuda_aes.rs  mod.rs  opencl_aes.rs
src/hardware/gpu/kernels/hash_kernel/: cuda_hash.rs  mod.rs  opencl_hash.rs
src/hardware/gpu/kernels/hash_kernel/shaders/: sha512.ptx
src/hardware/gpu/kernels/signature_kernel/: cuda_signature.rs  mod.rs  opencl_signature.rs
src/hardware/gpu/kernels/sm4_kernel/: cuda_sm4.rs  mod.rs  opencl_sm4.rs
src/hash/: mod.rs
src/key/: derivation.rs  kdf_counter.rs  lifecycle.rs  manager.rs  mod.rs  openssl_rsa.rs  post_quantum.rs  rotation.rs  tests.rs  usage_limit.rs  x25519.rs
src/memory/: mod.rs  tests.rs
src/plugin/: hot_reload.rs  loader.rs  manager.rs  mod.rs
src/provider/: mod.rs  registry.rs
src/random/: hardware.rs  mod.rs  monitor.rs
src/ratchet/: config.rs  dh_ratchet.rs  message.rs  mod.rs  serialization.rs  state.rs  symmetric_ratchet.rs  weak_key.rs
src/side_channel/: cache_protection.rs  cache_protection_debug.rs  constant_time.rs  embedded_power.rs  error_injection.rs  fn_file.rs  impl_file.rs  masking.rs  mod.rs  power_analysis.rs  stats_tests.rs  struct_file.rs  tests.rs
src/side_channel/embedded_power/: impl.rs  mod.rs  struct.rs
src/signer/: ecdsa.rs  ed25519.rs  mod.rs  rsa.rs  sm2.rs  tests.rs
src/simd/: hash.rs  mod.rs  sm3.rs  sm4.rs
tests/: all_tests.rs  debug_aes_gcm.rs  debug_aes_gcm_vector4.rs  debug_test.rs  gpu_device_test.rs  i18n_test.rs  mod.rs  prometheus_test.rs
tests/ffi/: JavaTest.java  c_ffi_test.c  python_test.py
tests/fips/: cavp_test.rs
tests/fips/cavp/: mod.rs  test_vectors.json
tests/fuzz/: fuzz_cipher.rs  fuzz_random.rs  mod.rs
tests/integration/: c_api_test.rs  double_ratchet_test.rs  end_to_end_test.rs  java_jni_test.rs  key_rotation_test.rs  mod.rs  plugin_hot_reload_test.rs
tests/performance/: api_latency_test.rs  mod.rs  simd_performance.rs
tests/security/: constant_time_test.rs  mod.rs  plugin_fault_injection_test.rs
tests/side_channel/: cache_protection_debug_test.rs  mod.rs
tests/uat/: api_communication.rs  api_communication_uat.rs  audit_log_uat.rs  database_encryption.rs  debug_audit_log.rs  fips_self_test_failure_uat.rs  fips_uat.rs  fips_validation.rs  key_rotation_uat.rs  mod.rs  multi_tenant_isolation_uat.rs  simd_performance.rs
tests/unit/: cipher_test.rs  countermeasure_stats_test.rs  key_test.rs  memory_protection_test.rs  mod.rs  plugin_test.rs  signature_test.rs
