[package]
name = "ciphern"
version = "0.1.0"
edition = "2021"
authors = ["Kirky.X <Kirky-X@outlook.com>"]
description = "Enterprise-grade cryptographic library"
license = "MIT"
repository = "https://github.com/Kirky-X/ciphern"
homepage = "https://github.com/Kirky-X/ciphern"
documentation = "https://docs.rs/ciphern"
keywords = ["cryptography", "encryption", "security", "aes", "sm4"]
categories = ["cryptography", "no-std"]
readme = "README.md"

[dependencies]
ring = "0.17.8"
libsm = "0.6.0"
gm-sm4 = "0.10.0"
aes-gcm = "0.10.3"
ghash = "0.5.1"
ctr = "0.9.2"
cipher = "0.4.4"
sm4 = "0.5.1"
argon2 = "0.5.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
zeroize = { version = "1.8.0", features = ["derive", "zeroize_derive"] }
libc = "0.2.162"
libloading = "0.8.5"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
getrandom = { version = "0.2.15", features = ["js"] }
statistical = "1.0.0"
statrs = "0.16.0"
rustfft = "6.1.0"
sha2 = "0.10.8"
hmac = "0.12"
rsa = "0.9.6"
pkcs8 = "0.10.2"
jni = "0.21.1"
pyo3 = { version = "0.20.3", features = ["extension-module"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
prometheus = "0.13.4"
thiserror = "1.0.61"
hex = "0.4.3"
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.5.0"
subtle = "2.6.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
once_cell = "1.19.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
tempfile = "3.12.0"

[features]
default = ["std", "fips", "hash", "encrypt", "kdf"]
std = []
fips = []
hash = []
encrypt = []
kdf = ["encrypt"]
plugin = []
generate_headers = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
debug = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1


[[bench]]
name = "cipher_bench"
harness = false

[[example]]
name = "symmetric_encryption"
path = "examples/symmetric_encryption.rs"

[[example]]
name = "digital_signatures"
path = "examples/digital_signatures.rs"

[[example]]
name = "key_management"
path = "examples/key_management.rs"

[[example]]
name = "key_derivation"
path = "examples/key_derivation.rs"

[[example]]
name = "hashing"
path = "examples/hashing.rs"

[[example]]
name = "random_generation"
path = "examples/random_generation.rs"

[[example]]
name = "streaming_encryption"
path = "examples/streaming_encryption.rs"

[[example]]
name = "fips_compliance"
path = "examples/fips_compliance.rs"

[[example]]
name = "python_api"
path = "examples/python_api.rs"

[[example]]
name = "java_api"
path = "examples/java_api.rs"
